to parse unkown charcode source, by reading a file as a binary file